--- a/ProductsPage/LinkedHTMLs/self-dev-index.html
+++ b/ProductsPage/LinkedHTMLs/self-dev-index.html
@@ -159,7 +159,7 @@
             </section>
         </div>
         <div class="text-center p-3 fs-18" style="background-color: rgba(0, 0, 0, 0.2);">
-            Creator: <a class="text-white" href="https://github.com/mahdi-Eth" aria-label="Visit Mahdi's GitHub">Mahdi Ettehadnejad</a>
+            Creator: <a class="text-white" href="https://github.com/mahdi-Eth" aria-label="Visit Mahdi's GitHub">AMIT</a>
         </div>
     </footer>
 
