--- a/Home-Page/index.html
+++ b/Home-Page/index.html
@@ -514,7 +514,7 @@
       <div class="container">
           <div class="row align-items-center">
               <div class="col-lg-6 col-sm-5 text-right">
-                  <p>Creator :<i class="icon_heart"></i> <a href="https://github.com/mahdi-Eth" target="_blank">Mahdi Ettehadnejad</a></p>
+                  <p>Creator :<i class="icon_heart"></i> <a href="https://github.com/mahdi-Eth" target="_blank">AMIT</a></p>
               </div>
           </div>
       </div>
